--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
           </div>
         </div>
       </div>
-      <h4 id="patience">This may take a minute!</h4>
+      <h4 class="patience">This may take a minute!</h4>
+      <div class="patience animation">
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+      </div>
       <h4 id="total-headlines"></h4>
       <div id="headline"></div>
     </div>
